--- a/detail/apple/mac_MQD32ZP.html
+++ b/detail/apple/mac_MQD32ZP.html
@@ -340,7 +340,7 @@
 										<span class="qty-down">-</span>
 									</div>
 								</div>
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<a href="../../user/cart.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button></a>
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
@@ -758,7 +758,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -777,7 +779,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -795,7 +799,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -823,7 +829,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -850,7 +858,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -893,7 +903,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -911,7 +923,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -939,7 +953,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -966,7 +982,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -994,7 +1012,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
