--- a/detail/asus/Asus GL503VM-GZ219T.html
+++ b/detail/asus/Asus GL503VM-GZ219T.html
@@ -301,7 +301,7 @@
 										<span class="qty-down">-</span>
 									</div>
 								</div>
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<a href="../../user/cart.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button></a>
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
@@ -730,7 +730,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -750,7 +752,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -767,7 +771,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ </button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -787,7 +793,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i>thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -804,7 +812,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -844,7 +854,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i>thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -862,7 +874,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -880,7 +894,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -898,7 +914,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -915,7 +933,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ </button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
