--- a/detail/dell/dell inspiron 13 5378.html
+++ b/detail/dell/dell inspiron 13 5378.html
@@ -310,7 +310,7 @@
 										<span class="qty-down">-</span>
 									</div>
 								</div>
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<a href="../../user/cart.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button></a>
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
@@ -739,7 +739,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i>thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -759,7 +761,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -779,7 +783,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ </button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -799,7 +805,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -816,7 +824,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -858,7 +868,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i>thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -878,7 +890,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -896,7 +910,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ </button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -914,7 +930,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -931,7 +949,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
