--- a/detail/apple/mac_MPXR2ZP.html
+++ b/detail/apple/mac_MPXR2ZP.html
@@ -330,7 +330,7 @@
 										<span class="qty-down">-</span>
 									</div>
 								</div>
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<a href="../../user/cart.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button></a>
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
@@ -756,7 +756,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -775,7 +777,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -793,7 +797,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -821,7 +827,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -848,7 +856,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -891,7 +901,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -909,7 +921,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -937,7 +951,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -964,7 +980,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -992,7 +1010,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
