--- a/detail/msi/msi_GP62M-1497.html
+++ b/detail/msi/msi_GP62M-1497.html
@@ -341,7 +341,7 @@
 										<span class="qty-down">-</span>
 									</div>
 								</div>
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<a href="../../user/cart.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button></a>
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
@@ -772,7 +772,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -795,7 +797,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -813,7 +817,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -841,7 +847,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -868,7 +876,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -911,7 +921,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -929,7 +941,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -957,7 +971,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -984,7 +1000,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -1012,7 +1030,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								<a href="../../user/cart.html">
+									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top:8px"></i>Thêm vào giỏ</button>
+								</a>
 							</div>
 						</div>
 					</div>
